src/objects/mkto_si__Get_Method_Argus__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__ArguName__c</fullName>
        <description>This would be the name of the long argu stored in sObject</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ArguName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ArguValue__c</fullName>
        <description>This would be the argument value stored passed. Since Get method can&apos;t hold such long argu in IE 7/8. They are firstly stored in sObject and then retrieved in controller.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ArguValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ContactType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Key__c</fullName>
        <description>This would be the identifier of the get call.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__User_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GetMethodArgu</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GetMethodArgu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GetMethodArgus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>